tests/src/frontend/typechecking/invalid/visibility_match_2.sk
class Foo{x: Int, protected y: Int}

fun no(f: Foo): Int {
  f match {
  | Foo{y => b, x => a} -> a + b
  }
}
